# Dataflow_Code_Generator

./: .gitignore  CAL Grammar.txt  CMakeLists.txt  Changelog.md  Code_Generator.cpp  README.md
AST_Analysis/: AST_Analysis.hpp  CMakeLists.txt  Semantic_Analysis.cpp
Code_Generation/: Code_Generation.cpp
Code_Generation/Language/C_Cpp/: Action_Conversion.cpp  Action_Conversion.hpp  Composit_Actor_Creation.cpp  Converter_RVC_Cpp.cpp  Converter_RVC_Cpp.hpp  Core_Creation.cpp  Generate_C_Cpp.cpp  Generate_C_Cpp.hpp  Global_Scheduling.cpp  Local_Scheduling.cpp  (+2 more)
Config/: config.h  debug.h
Conversion/: CMakeLists.txt  Conversion.cpp  Conversion.hpp
Dataflow_Analysis/Actor_Classification/: Actor_Classification.cpp
Dataflow_Analysis/Network/: Network.cpp
Dataflow_Analysis/Scheduling_Lib/: Scheduling_Lib.cpp  Scheduling_Lib.hpp  Topology_Sort.cpp
IR/: Action.hpp  Actor.hpp  Actor_Instance.hpp  Actor_Instance_Base.hpp  CMakeLists.txt  Composit_Actor.hpp  Dataflow_Network.hpp  Edge.hpp  IR_Transform.cpp  Unit.hpp
IR/AST/: AST.hpp  AST_Builder.cpp  AST_Builder.hpp  AST_Helper.cpp  AST_Helper.hpp  AST_Printer.cpp  AST_Printer.hpp  CMakeLists.txt
Lexer/: CMakeLists.txt  Lexer.cpp  Lexer.hpp
Mapping/: Level_Mapping.cpp  Mapping.cpp  Mapping_Lib.cpp
Optimization_Phase2/: CMakeLists.txt  Optimization_Phase2.cpp
Optimization_Phase2/Actor_Merge/: AST_Transformations.cpp  AST_Transformations.hpp  CMakeLists.txt  Merge_Optimization.cpp  Merge_Optimization.hpp
Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
Reader/: Unit_Reader.cpp
common/include/: Exceptions.hpp
(+2 files in other folders)
